# CodingCrew

./: .env.example  .gitignore  ARCHITECTURE.md  BOOTSTRAP.md  CLAUDE.md  README.md  crew.yaml  pyproject.toml  requirements.txt
api/: __init__.py  app.py
api/routes/: __init__.py  projects.py  queue.py  webhooks.py  workers.py
configs/: default.yaml  testrunfour.yaml
orchestrator/: __init__.py  router.py
scripts/: install-systemd.sh  install.sh  run-api.sh  run-orchestrator.sh  run-worker.sh  setup_github.py
shared/: __init__.py  config.py
src/: agent_generator.py  config.py  litellm_generator.py  models.py  orchestrator.py
src/github/: __init__.py  client.py  setup.py
src/hooks/: guard.py  stop_gate.py
src/providers/: __init__.py  anthropic.py  base.py  ollama.py
systemd/: api-gateway.service  litellm.service  orchestrator-router.service  orchestrator.service  worker-claude.service  worker-ollama.service
workers/: __init__.py  base.py  claude_worker.py  ollama_worker.py
