[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codingcrew"
version = "0.1.0"
description = "Autonome Coding-Crew mit zentraler Config"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.scripts]
codingcrew = "codingcrew.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"
